# dapr-pet-battle

./: README.md  docker-compose.yaml
battle_service/: Dockerfile  main.py  pyproject.toml
pet_service/: Dockerfile  main.py  pyproject.toml
